# MaReIA

./: README.md
legacy/sampleoutput/: outputsegment2.txt
legacy/src/: UtilsLogger.h  cmake_install.cmake  finalOutputSample.txt  mapperImageSegment.cpp  mapperImageSegment.cpp.back  sampleinput.txt  testReading.cpp
legacy/src/PAISBoundaryFixer/: BoundaryFix.cpp  BoundaryFixFunction.cpp.back
legacy/src/PAISBoundaryFixer/sampleinput/: sampleinput.txt
legacy/src/tiling/: tileImage.c
sampleoutput/: outputsegment.txt
src/: CMakeCache.txt  CMakeLists.txt  HistologicalEntities.cpp  HistologicalEntities.h  Makefile  bootstrap.sh  mapperImageSegment.cpp  mapperImageSegment.cpp.back.2  simpleRead.cpp
src/PAISBoundaryFixer/: BoundaryFix  BoundaryFix.cpp~  BoundaryFix.h  BoundaryFix.h~  BoundaryFix2.cpp  BoundaryFixFunction.cpp~  BoundaryFixFunction2.cpp  BoundaryFixFunction2.cpp~  BoundaryFixer.cpp~  BoundaryFixerFunction.cpp~  clipper.hxx  sampleinput.txt~
src/PAISBoundaryFixer/sampleinput/: BoundaryFixerFunction.txt~  sampleoutput.txt
src/aggregation/: reducerImageAnalysis.cpp
src/segmentation/: BoundaryFix.h  BoundaryFixFunction.cpp  BoundaryFixFunction2.cpp  README.md  mapperImageAnalysis.cpp  mapperImageSegment.cpp
src/spjoin/: spjointiletest.cpp  spjointiletest.cpp~
src/tiling/: README.md  tileImage  tileImage.c
